--- a/htmls/result.html
+++ b/htmls/result.html
@@ -213,7 +213,7 @@ The image above shows three explanations: (1) Original X-ray, (2) LIME explanati
 
 <!-- Action Buttons -->
 <div class="mt-12 flex flex-col sm:flex-row items-center justify-center gap-4">
-<button onclick="downloadReport()" class="w-full sm:w-auto px-8 py-3 bg-primary hover:bg-blue-700 text-white font-semibold rounded-xl flex items-center justify-center gap-2 transition-all shadow-lg shadow-blue-500/20 active:scale-95">
+<button onclick="openReportDialog()" class="w-full sm:w-auto px-8 py-3 bg-primary hover:bg-blue-700 text-white font-semibold rounded-xl flex items-center justify-center gap-2 transition-all shadow-lg shadow-blue-500/20 active:scale-95">
 <span class="material-symbols-outlined">file_download</span>
 Download Report (PDF)
 </button>
@@ -221,6 +221,105 @@ Download Report (PDF)
 <span class="material-symbols-outlined">file_upload</span>
 Upload New Image
 </button>
+</div>
+
+<!-- PDF Report Dialog Modal -->
+<div id="reportModal" class="hidden fixed inset-0 bg-black/50 flex items-center justify-center z-50 p-4">
+<div class="bg-white dark:bg-slate-800 rounded-2xl shadow-2xl max-w-md w-full max-h-[90vh] overflow-y-auto">
+<!-- Modal Header -->
+<div class="sticky top-0 bg-white dark:bg-slate-800 px-6 py-4 border-b border-slate-200 dark:border-slate-700 flex items-center justify-between">
+<h3 class="text-lg font-semibold text-slate-900 dark:text-white flex items-center gap-2">
+<span class="material-symbols-outlined text-primary">description</span>
+Patient Report Details
+</h3>
+<button onclick="closeReportDialog()" class="p-1 hover:bg-slate-100 dark:hover:bg-slate-700 rounded-lg transition-colors">
+<span class="material-symbols-outlined text-slate-500 dark:text-slate-400">close</span>
+</button>
+</div>
+
+<!-- Modal Content -->
+<form id="reportForm" class="p-6 space-y-4">
+<!-- Patient Information Section -->
+<div>
+<label class="block text-sm font-semibold text-slate-900 dark:text-white mb-3">Patient Information</label>
+
+<!-- Patient Name -->
+<div class="mb-4">
+<label for="patientName" class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1">Patient Name *</label>
+<input type="text" id="patientName" name="patient_name" required class="w-full px-3 py-2 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-700 text-slate-900 dark:text-white placeholder-slate-400 dark:placeholder-slate-500 focus:outline-none focus:ring-2 focus:ring-primary dark:focus:ring-blue-400" placeholder="Enter patient name">
+</div>
+
+<!-- Patient Age -->
+<div class="mb-4">
+<label for="patientAge" class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1">Patient Age *</label>
+<input type="number" id="patientAge" name="patient_age" required min="0" max="150" class="w-full px-3 py-2 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-700 text-slate-900 dark:text-white placeholder-slate-400 dark:placeholder-slate-500 focus:outline-none focus:ring-2 focus:ring-primary dark:focus:ring-blue-400" placeholder="Enter patient age">
+</div>
+
+<!-- Patient Gender -->
+<div class="mb-4">
+<label for="patientGender" class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1">Patient Gender *</label>
+<select id="patientGender" name="patient_gender" required class="w-full px-3 py-2 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-700 text-slate-900 dark:text-white focus:outline-none focus:ring-2 focus:ring-primary dark:focus:ring-blue-400">
+<option value="">Select gender</option>
+<option value="Male">Male</option>
+<option value="Female">Female</option>
+<option value="Other">Other</option>
+</select>
+</div>
+
+<!-- Patient ID -->
+<div class="mb-4">
+<label for="patientId" class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1">Patient ID</label>
+<input type="text" id="patientId" name="patient_id" class="w-full px-3 py-2 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-700 text-slate-900 dark:text-white placeholder-slate-400 dark:placeholder-slate-500 focus:outline-none focus:ring-2 focus:ring-primary dark:focus:ring-blue-400" placeholder="Enter patient ID (optional)">
+</div>
+
+<!-- Patient Phone -->
+<div class="mb-4">
+<label for="patientPhone" class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1">Patient Phone</label>
+<input type="tel" id="patientPhone" name="patient_phone" class="w-full px-3 py-2 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-700 text-slate-900 dark:text-white placeholder-slate-400 dark:placeholder-slate-500 focus:outline-none focus:ring-2 focus:ring-primary dark:focus:ring-blue-400" placeholder="Enter patient phone (optional)">
+</div>
+
+<!-- Patient Email -->
+<div class="mb-4">
+<label for="patientEmail" class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1">Patient Email</label>
+<input type="email" id="patientEmail" name="patient_email" class="w-full px-3 py-2 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-700 text-slate-900 dark:text-white placeholder-slate-400 dark:placeholder-slate-500 focus:outline-none focus:ring-2 focus:ring-primary dark:focus:ring-blue-400" placeholder="Enter patient email (optional)">
+</div>
+</div>
+
+<!-- Report Information Section -->
+<div>
+<label class="block text-sm font-semibold text-slate-900 dark:text-white mb-3">Report Information</label>
+
+<!-- Disease Name -->
+<div class="mb-4">
+<label for="diseaseName" class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1">Disease Name *</label>
+<input type="text" id="diseaseName" name="disease_name" required class="w-full px-3 py-2 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-700 text-slate-900 dark:text-white placeholder-slate-400 dark:placeholder-slate-500 focus:outline-none focus:ring-2 focus:ring-primary dark:focus:ring-blue-400" placeholder="e.g., Pneumonia" value="{{ result.predicted_class }}">
+</div>
+
+<!-- Findings -->
+<div class="mb-4">
+<label for="findings" class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1">Findings *</label>
+<textarea id="findings" name="findings" required rows="3" class="w-full px-3 py-2 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-700 text-slate-900 dark:text-white placeholder-slate-400 dark:placeholder-slate-500 focus:outline-none focus:ring-2 focus:ring-primary dark:focus:ring-blue-400 resize-none" placeholder="Describe the findings..."></textarea>
+</div>
+
+<!-- Impression -->
+<div class="mb-4">
+<label for="impression" class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-1">Impression *</label>
+<textarea id="impression" name="impression" required rows="3" class="w-full px-3 py-2 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-700 text-slate-900 dark:text-white placeholder-slate-400 dark:placeholder-slate-500 focus:outline-none focus:ring-2 focus:ring-primary dark:focus:ring-blue-400 resize-none" placeholder="Enter your impression..."></textarea>
+</div>
+</div>
+
+<!-- Modal Footer -->
+<div class="flex gap-3 pt-4 border-t border-slate-200 dark:border-slate-700">
+<button type="button" onclick="closeReportDialog()" class="flex-1 px-4 py-2 bg-slate-100 dark:bg-slate-700 text-slate-700 dark:text-slate-200 font-medium rounded-lg hover:bg-slate-200 dark:hover:bg-slate-600 transition-colors">
+Cancel
+</button>
+<button type="submit" class="flex-1 px-4 py-2 bg-primary hover:bg-blue-700 text-white font-medium rounded-lg transition-colors flex items-center justify-center gap-2">
+<span class="material-symbols-outlined !text-[18px]">file_download</span>
+Generate PDF
+</button>
+</div>
+</form>
+</div>
 </div>
 
 <!-- Footer -->
@@ -301,6 +400,87 @@ Analysis Engine: v4.3.0-stable • Model Confidence: {{ "%.1f"|format(result.con
     }
 
     setProfileImage();
+
+    // Report Dialog Functions
+    function openReportDialog() {
+        const reportModal = document.getElementById('reportModal');
+        reportModal.classList.remove('hidden');
+        // Set disease name to predicted class by default
+        document.getElementById('diseaseName').value = '{{ result.predicted_class }}';
+    }
+
+    function closeReportDialog() {
+        const reportModal = document.getElementById('reportModal');
+        reportModal.classList.add('hidden');
+    }
+
+    // Close modal when clicking outside
+    document.getElementById('reportModal').addEventListener('click', (e) => {
+        if (e.target.id === 'reportModal') {
+            closeReportDialog();
+        }
+    });
+
+    // Handle form submission
+    document.getElementById('reportForm').addEventListener('submit', async (e) => {
+        e.preventDefault();
+
+        const formData = new FormData();
+        formData.append('patient_name', document.getElementById('patientName').value);
+        formData.append('patient_age', document.getElementById('patientAge').value);
+        formData.append('patient_gender', document.getElementById('patientGender').value);
+        formData.append('patient_id', document.getElementById('patientId').value);
+        formData.append('patient_phone', document.getElementById('patientPhone').value);
+        formData.append('patient_email', document.getElementById('patientEmail').value);
+        formData.append('disease_name', document.getElementById('diseaseName').value);
+        formData.append('findings', document.getElementById('findings').value);
+        formData.append('impression', document.getElementById('impression').value);
+        
+        // Add the explanation image (result image with LIME and Grad-CAM)
+        formData.append('image_result_base64', '{{ result.explanation }}');
+
+        const doctorId = '{{ doctor_id }}';
+
+        try {
+            // Show loading state
+            const submitBtn = document.querySelector('#reportForm button[type="submit"]');
+            const originalText = submitBtn.innerHTML;
+            submitBtn.disabled = true;
+            submitBtn.innerHTML = '<span class="material-symbols-outlined animate-spin">hourglass_empty</span>Generating...';
+
+            const response = await fetch(`/generate_report_pdf/${doctorId}`, {
+                method: 'POST',
+                body: formData
+            });
+
+            if (response.ok) {
+                // Trigger download
+                const blob = await response.blob();
+                const url = window.URL.createObjectURL(blob);
+                const a = document.createElement('a');
+                a.href = url;
+                a.download = `xray_report_${new Date().getTime()}.pdf`;
+                document.body.appendChild(a);
+                a.click();
+                window.URL.revokeObjectURL(url);
+                document.body.removeChild(a);
+
+                closeReportDialog();
+            } else {
+                const error = await response.text();
+                alert('Error generating report: ' + error);
+            }
+
+            submitBtn.disabled = false;
+            submitBtn.innerHTML = originalText;
+        } catch (error) {
+            console.error('Error:', error);
+            alert('Error generating report: ' + error.message);
+            const submitBtn = document.querySelector('#reportForm button[type="submit"]');
+            submitBtn.disabled = false;
+            submitBtn.innerHTML = originalText;
+        }
+    });
 </script>
 
 </body></html>
